--- a/v1/main.html
+++ b/v1/main.html
@@ -8,69 +8,74 @@
 </head>
 
 <body>
-    <header>
-        <h2 class="headerAbout">В нашем интерент магазине предоставлен широкий выбор ноутбуков и комплектующих к ним
-        </h2>
-        <button class="toShop">Магазин</button>
-    </header>
-    <div class="about">
-        <h2 id="topAbout">О Нас</h2>
-        <p id="botAbout">Сервисный центр, основанный в 2005 году в г.Одесса. Специализируется на ремонте и
-            восстановлении данных ноутбуков, планшетов, телефонов, техники Apple. А также наше подразделение занимается
-            проверенной и продажей ноутбуков из Европы.</p>
-    </div>
-    <div class="imagesAbout">
-        <div class="imgBox">
-            <img class="picA" src="/img/15981910343980.png" alt="sorry">
-            <h3 class="topPicA">Полная и точная диагностика</h3>
-            <p class="botPicA">Проведем диагностику и предоставим полную информацию о проблемах вашего устройства в кротчайшие сроки</p>
+    <div class="container">
+        <header>
+            <h2 class="headerAbout">В нашем интерент магазине предоставлен широкий выбор ноутбуков и комплектующих к ним
+            </h2>
+            <button class="toShop">Магазин</button>
+        </header>
+        <div class="about">
+            <h2 id="topAbout">О Нас</h2>
+            <p id="botAbout">Сервисный центр, основанный в 2005 году в г.Одесса. Специализируется на ремонте и
+                восстановлении данных ноутбуков, планшетов, телефонов, техники Apple. А также наше подразделение
+                занимается
+                проверенной и продажей ноутбуков из Европы.</p>
         </div>
-        <div class="imgBox">
-            <img class="picA" src="/img/15981910343980.png" alt="sorry">
-            <h3 class="topPicA">Высокое качество ремонта</h3>
-            <p class="botPicA">Предоставим гарантию на ремонт, по этому если ваше устройство имеет гарантию, мы выполним ремонт бесплатно</p>
+        <div class="imagesAbout">
+            <div class="imgBox">
+                <img class="picA" src="\img\15981910343980.png" alt="sorry">
+                <h3 class="topPicA">Полная и точная диагностика</h3>
+                <p class="botPicA">Проведем диагностику и предоставим полную информацию о проблемах вашего устройства в
+                    кротчайшие сроки</p>
+            </div>
+            <div class="imgBox">
+                <img class="picA" src="\img\15981910343980.png" alt="sorry">
+                <h3 class="topPicA">Высокое качество ремонта</h3>
+                <p class="botPicA">Предоставим гарантию на ремонт, по этому если ваше устройство имеет гарантию, мы
+                    выполним ремонт бесплатно</p>
+            </div>
+            <div class="imgBox">
+                <img class="picA" src="\img\15981910343980.png" alt="sorry">
+                <h3 class="topPicA">Лучшее обслуживание клиентов</h3>
+                <p class="botPicA">Мы будем держать в курсе всего процесса, и если у вас возникнут вопросы по вашему
+                    устройству, ответим.</p>
+            </div>
         </div>
-        <div class="imgBox">
-            <img class="picA" src="/img/15981910343980.png" alt="sorry">
-            <h3 class="topPicA">Лучшее обслуживание клиентов</h3>
-            <p class="botPicA">Мы будем держать в курсе всего процесса, и если у вас возникнут вопросы по вашему устройству, ответим.</p>
-         </div>
-    </div>
 
-    <div id="if">
-        <div id="forImg">
-        <img id="ifImg" src="/img/15981910343980.png" alt="sorry">
-    </div>
-        <h1 id="ifHead">Ваше устройство уже у нас?
-            <p id="ifFoot">Проверьте на каком этапе ремонта оно находится</p>
-            <input id="ifInp" type="text" placeholder="Имя пользователя" >
-            <button id="check">Проверить</button>
-        </h1>
-    </div>
+        <div id="if">
+            <div id="forImg">
+                <img id="ifImg" src="\img\15981910343980.png" alt="sorry">
+            </div>
+            <h1 id="ifHead">Ваше устройство уже у нас?
+                <p id="ifFoot">Проверьте на каком этапе ремонта оно находится</p>
+                <input id="ifInp" type="text" placeholder="Имя пользователя">
+                <button id="check">Проверить</button>
+            </h1>
+        </div>
 
-    <div id="reviewers">
-        <h2 id="reviewMain">Отзывы о нашей работе</h2>
-        <div id="rating"></div>
+        <div id="reviewers">
+            <h2 id="reviewMain">Отзывы о нашей работе</h2>
+            <div id="rating"></div>
+        </div>
+
+        <div id="cost">
+            <img id="costImg" src="\img\15981910343980.png" alt="sorry">
+            <h2 id="costMain">Узнайте стоимость ремонта Вашего устройства
+            </h2>
+            <div id="inpHelp">
+                <input class="name" type="text" placeholder="Ваше имя">
+                <input class="name" type="number" placeholder="Номер телефона">
+                <input id="aboutPhone" type="text/number" placeholder="Что случилось с устройством?">
+                <button id="sendPhone">Узнать стоимость</button>
+            </div>
+
+        </div>
+
+        <footer>
+            <h1 id="feedback">Контакты</h1>
+        </footer>
+
     </div>
-
-    <div id="cost">
-        <img id="costImg" src="/img/15981910343980.png" alt="sorry">
-        <h2 id="costMain">Узнайте стоимость ремонта Вашего устройства
-        </h2>
-        <div id="inpHelp">
-        <input class="name" type="text" placeholder="Ваше имя">
-        <input class="name" type="number" placeholder="Номер телефона">
-        <input id="aboutPhone" type="text/number" placeholder="Что случилось с устройством?">
-        <button id="sendPhone">Узнать стоимость</button>
-    </div>
-        
-    </div>
-
-    <footer>
-<h1 id="feedback">Контакты</h1>
-    </footer>
-
-
     <script src=""></script>
 </body>
 
