--- a/v1/main.html
+++ b/v1/main.html
@@ -63,8 +63,8 @@
             <h2 id="costMain">Узнайте стоимость ремонта Вашего устройства
             </h2>
             <div id="inpHelp">
-                <input class="name" type="text" placeholder="Ваше имя">
-                <input class="name" type="number" placeholder="Номер телефона">
+                <input id="personeName" class="name" type="text" placeholder="Ваше имя">
+                <input id="personeId" class="name" type="number" placeholder="Номер телефона">
                 <input id="aboutPhone" type="text/number" placeholder="Что случилось с устройством?">
                 <button id="sendPhone">Узнать стоимость</button>
             </div>
@@ -76,7 +76,7 @@
         </footer>
 
     </div>
-    <script src=""></script>
+    <script src="/v1/input"></script>
 </body>
 
 </html>
